# oss-fall2025

./: DESIGN.md  Dockerfile.trello  README.md  main.py  mkdocs.yml  pyproject-docker.toml  pyproject.toml
.circleci/: config.yml
docs/: component.md  index.md  kanban-integration.md
docs/api/: kanban_client_adapter.md  kanban_client_api.md  kanban_client_service.md  kanban_generated_client.md  trello_client_impl.md
src/ai_chat_ticket_integration/: README.md  pyproject.toml
src/ai_chat_ticket_integration/src/ai_chat_ticket_integration/: __init__.py  integration.py
src/ai_chat_ticket_integration/tests/: test_integration.py
src/ai_ticket_api_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/ai_ticket_api_service/src/ai_ticket_api_service/: __init__.py  app.py
src/chat_ticket_integration/: README.md  __init__.py  example_integration.py  pyproject.toml
src/chat_ticket_integration/src/chat_ticket_integration/: __init__.py  integration.py
src/chat_ticket_integration/tests/: test_integration.py
src/gmail_client_impl/src/gmail_client_impl/: gmail_impl.py
src/gmail_client_impl/tests/: test_gmail_client_circleci.py  test_manual_env_loader_circleci.py
src/kanban_client_adapter/: README.md  pyproject.toml
src/kanban_client_adapter/src/kanban_client_adapter/: __init__.py  adapter.py  models.py
src/kanban_client_adapter/tests/: __init__.py  test_adapter.py
src/kanban_client_api/: README.md  pyproject.toml
src/kanban_client_api/src/kanban_client_api/: __init__.py  client.py  models.py
src/kanban_client_service/: README.md  pyproject.toml
src/kanban_client_service/src/kanban_client_service/: __init__.py  main.py  model_converter.py
src/kanban_client_service/tests/: test_app.py  test_csrf_protection.py  test_service.py  test_service_error_paths.py  test_service_extra.py  test_ticket_service.py  test_trello_service_integration.py
src/kanban_generated_client/: README.md  pyproject.toml
src/kanban_generated_client/kanban_generated_client/api/default/: create_board_boards_post.py  create_card_lists_list_id_cards_post.py  create_list_boards_board_id_lists_post.py  delete_board_boards_board_id_delete.py  get_board_boards_board_id_get.py  get_boards_boards_get.py  get_card_cards_card_id_get.py  get_cards_lists_list_id_cards_get.py  get_lists_boards_board_id_lists_get.py  update_board_boards_board_id_put.py  update_card_cards_card_id_put.py  update_list_lists_list_id_put.py
src/kanban_generated_client/kanban_generated_client/models/: __init__.py  error_response.py  kanban_board.py  kanban_card.py  kanban_user.py
src/mail_client_adapter/: pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: mail_client_adapter.py
src/mail_client_adapter/tests/: test_adapter.py
src/mail_client_api/src/mail_client_api/: __init__.py  message.py  test_client.py
src/mail_client_service/: README.md  main.py  openapi.json  pyproject.toml
src/mail_client_service/mail-client-service-client/mail_client_service_client/api/messages/: delete_message_messages_message_id_delete.py  get_message_messages_message_id_get.py  list_messages_messages_get.py  mark_as_read_messages_message_id_read_post.py
src/mail_client_service/mail-client-service-client/mail_client_service_client/models/: __init__.py  message_response.py  success_response.py
src/mail_client_service/mail_client_service_client/: pyproject.toml
src/mail_client_service/src/mail_client_service/: app.py  main.py  test_client.py
src/mail_client_service/tests/: test_app.py
src/mail_client_service_impl/: pyproject.toml
src/mail_client_service_impl/src/mail_client_service_impl/: __init__.py
src/ticket_api/: pyproject.toml
src/ticket_api/src/ticket_api/: __init__.py  client.py  exceptions.py  models.py
src/trello_client_adapter/: pyproject.toml
src/trello_client_adapter/src/trello_client_adapter/: __init__.py  trello_client_adapter.py
src/trello_client_api/: pyproject.toml
src/trello_client_api/src/trello_client_api/: client.py  exceptions.py  models.py
src/trello_client_api/tests/: test_models.py
src/trello_client_impl/: pyproject.toml
src/trello_client_impl/src/trello_client_impl/: __init__.py  oauth.py  trello_impl.py
src/trello_client_impl/tests/: test_oauth.py  test_trello_impl.py
src/trello_client_service/: pyproject.toml
src/trello_client_service/src/trello_client_service/: __init__.py  main.py  responses.py
src/trello_client_service/tests/: test_service.py  test_service_error_paths.py  test_trello_service_integration.py
src/trello_generated_client/trello_generated_client/api/default/: delete_card_cards_card_id_delete.py  get_current_user_users_me_get.py
src/trello_generated_client/trello_generated_client/models/: kanban_list.py
src/trello_ticket_impl/: README.md  pyproject.toml
src/trello_ticket_impl/src/trello_ticket_impl/: __init__.py  models.py  trello_ticket_impl.py
src/trello_ticket_impl/tests/: test_trello_ticket_impl.py
terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example
tests/e2e/: test_ai_chat_ticket_integration_e2e.py  test_chat_ticket_integration_e2e.py  test_mail_client_service_e2e.py
tests/integration/: test_adapter_e2e.py  test_kanban_integration.py  test_mail_client_service.py
tests/unit/: test_gmail_message_circleci.py
typings/ai_api/src/ai_api/: __init__.pyi
typings/chat_api/src/chat_api/: __init__.pyi
typings/tickets_api/src/tickets_api/: __init__.pyi
