[project]
name = "ai-ticket-api-service"
version = "0.1.0"
description = "FastAPI service for AI-powered ticket management with OpenTelemetry instrumentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    "ai-chat-ticket-integration[telemetry]>=0.1.0",
    "python-dotenv>=1.0.0",
    "discord-client-impl>=0.1.0",
    "trello-ticket-impl>=0.1.0",
    "openai-impl>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_ticket_api_service"]

[tool.uv.sources]
ai-chat-ticket-integration = { workspace = true }
trello-ticket-impl = { workspace = true }
discord-client-impl = { git = "https://github.com/koitu/oss-taapp.git", subdirectory = "src/discord_client_impl", rev = "hw3-alignment" }
openai-impl = { git = "https://github.com/natashagit/oss-nml.git", subdirectory = "src/openai_impl", rev = "hw_3" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=ai_ticket_api_service --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
