[project]
name = "chat-ticket-integration"
version = "0.1.0"
description = "Integration between chat and ticket systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "oss-apis",
]

[tool.uv.sources]
oss-apis = { git = "https://github.com/ivanearisty/OSS-APIs.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff]
extend = "../../pyproject.toml"
exclude = ["**/example_*.py", "example_integration.py"]
