
[project]
name = "mail-client-service"
version = "0.1.0"
description = "FastAPI service for mail client API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.110.0",
	"mail-client-api",
]

[project.optional-dependencies]
test = [
	"pytest>=7.0.0",
	"pytest-mock>=3.6.1",
	"httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = [
	"W293",
	"T201",
	"FBT001",
	"FBT002",
	"C901",
	"PLR0912",
	"PLR0915",
	"S105",
	"BLE001",
	"D203",
	"D213",
	"S101",
]

[tool.uv.sources]
mail-client-api = { workspace = true }